# curio-parachain

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HEADER-GPL3  README.md  curio-parachain-genesis  curio-parachain-wasm
api-tests/: .example.env  README.md  getmetadata.sh  package-lock.json  package.json  tsconfig.json
api-tests/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-tx.ts  definitions.ts  lookup.ts  registry.ts  types-lookup.ts
api-tests/src/refungible/: burn.test.ts  createItem.test.ts  deleteCollectionProperty.test.ts  deleteTokenProperty.test.ts  destroyCollection.test.ts  initCollection.test.ts  repartition.test.ts  setAllowance.test.ts  setCollectionProperty.test.ts  setPropertyPermission.test.ts  setTokenProperty.test.ts  toggleAdmin.test.ts  transfer.test.ts
api-tests/src/util/: accounts.ts  api.ts  collections.ts  index.ts  state.ts  (+1 more)
debian/: postrm
docs/: SUBSTRATE_AND_CUMULUS_PALLETS.md
modules/collection-primitives/: Cargo.toml
modules/collection-primitives/src/: bondrewd_codec.rs  bounded.rs  lib.rs
modules/currency-id/: Cargo.toml
modules/currency-id/src/: lib.rs
modules/mock-support/: Cargo.toml
modules/mock-support/src/: collections.rs  lib.rs
modules/primitives/: Cargo.toml
modules/primitives/src/: currency.rs  lib.rs  time.rs
modules/support/: Cargo.toml
modules/support/src/: dex.rs  incentives.rs  lib.rs  utils.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_specs/: rococo-local.json  testnet-live-2.json  testnet-live-raw.json  testnet-live.json  testnet-raw.json  testnet.json
pallets/bridge/: Cargo.toml
pallets/bridge/src/: benchmarking.rs  lib.rs  mock.rs  mock_shared.rs  tests.rs  weights.rs
pallets/bridge/src/components/: blacklist.rs  currencies_manager.rs  managers.rs  mod.rs  pausable.rs
pallets/common/: Cargo.toml  README.md
pallets/common/src/: collection_initializer.rs  handle.rs  lib.rs  mock.rs  tests.rs
pallets/currencies/: Cargo.toml  README.md
pallets/currencies/src/: lib.rs  mock.rs  mock_currency.rs  tests.rs  weights.rs
pallets/dex/: Cargo.toml  README.md
pallets/dex/src/: lib.rs  mock.rs  mock_currency.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parachain-staking/runtime-api/: Cargo.toml
pallets/parachain-staking/runtime-api/src/: lib.rs
pallets/parachain-staking/src/: api.rs  benchmarking.rs  default_weights.rs  inflation.rs  lib.rs  migration.rs  mock.rs  set.rs  tests.rs  types.rs
pallets/refungible/: Cargo.toml  README.md
pallets/refungible/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/whitelist/: Cargo.toml  README.md
pallets/whitelist/src/: lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
parachain-launch/: curio-testnet.yml
polkadot-launch/: dev-mode-config.json
primitives/curio/: Cargo.toml
primitives/curio/src/: lib.rs
runtime/: Cargo.toml
runtime-api/staking/: Cargo.toml
runtime/curio-devnet/: Cargo.toml
runtime/curio-devnet/src/: bridge.rs  collections.rs  consensus.rs  cumulus.rs  currency_id.rs  dex.rs  governance.rs  lib.rs  mock.rs  monetary.rs  sponsoring.rs  tests.rs  utilities.rs  xcm_config.rs
runtime/curio-devnet/src/benchmarking/: mod.rs  orml_tokens.rs  pallet_currencies.rs  pallet_dex.rs  pallet_refungible.rs  pallet_whitelist.rs  transaction_pause.rs  utils.rs
runtime/curio-devnet/src/weights/: block_weights.rs  frame_system.rs  mod.rs  orml_tokens.rs  pallet_balances.rs  pallet_bounties.rs  pallet_bridge.rs  pallet_collective.rs  pallet_currencies.rs  pallet_democracy.rs  pallet_dex.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_refungible.rs  pallet_scheduler.rs  pallet_session.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_whitelist.rs
runtime/curio-mainnet/: Cargo.toml
runtime/curio-mainnet/src/: bridge.rs  consensus.rs  currency_id.rs  governance.rs  impls.rs  lib.rs  monetary.rs  utilities.rs  xcm_config.rs
runtime/curio-mainnet/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_bounties.rs  pallet_bridge.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_currencies.rs  pallet_democracy.rs  pallet_dex.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
runtime/curio-testnet/: Cargo.toml
runtime/curio-testnet/src/: consensus.rs  cumulus.rs  dex.rs  governance.rs  lib.rs  monetary.rs  xcm_config.rs
runtime/curio-testnet/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  orml_tokens.rs  pallet_balances.rs  pallet_bounties.rs  pallet_collective.rs  pallet_democracy.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_refungible.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  parachain_staking.rs
runtime/src/: lib.rs  xcm_config.rs
runtime/src/benchmarking/: mod.rs  pallet_dex.rs  utils.rs
runtime/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_currencies.rs  pallet_democracy.rs  pallet_dex.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
scripts/: gen_wasm_and_genesis.bash  run-benchmarks.sh  run_all_benchmarks.sh
templates/: runtime-weight-template.hbs
(+10 files in other folders)
