[package]
name = "curio-parachain-node"
version = "1.0.0"
authors = ["Curio Capital AG"]
description = "A Curio Parachain Node."
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more.workspace = true
log.workspace = true
codec.workspace = true
serde = { workspace = true, features = ["derive"] }
hex-literal.workspace = true
jsonrpsee = { workspace = true, features = ["macros", "server"] }

# Local
curio-devnet-runtime = { workspace = true, features = ["std"] }
curio-testnet-runtime = { workspace = true, optional = true, features = ["std"] }
curio-mainnet-runtime = { workspace = true, optional = true, features = ["std"] }
primitives = { workspace = true, features = ["std"] }
module-support = { workspace = true, features = ["std"] }

# Substrate
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-executor.workspace = true
sc-keystore.workspace = true
sc-network.workspace = true
sc-network-sync = { workspace = true }
sc-network-common.workspace = true
sc-rpc.workspace = true
sc-rpc-api.workspace = true
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-keystore.workspace = true
sp-offchain = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-session = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
sp-timestamp.workspace = true
sp-transaction-pool = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
substrate-frame-rpc-system.workspace = true
substrate-prometheus-endpoint.workspace = true
try-runtime-cli.workspace = true

# Polkadot
polkadot-cli.workspace = true
polkadot-parachain = { workspace = true, features = ["std"] }
polkadot-primitives.workspace = true
polkadot-service.workspace = true
xcm.workspace = true

# Cumulus
cumulus-client-cli.workspace = true
cumulus-client-collator.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-network.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-core = {workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent.workspace = true
cumulus-relay-chain-inprocess-interface.workspace = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-rpc-interface.workspace = true
cumulus-relay-chain-minimal-node.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = [
	"curio-devnet-runtime/runtime-benchmarks",
	"curio-testnet-runtime?/runtime-benchmarks",
	"curio-mainnet-runtime?/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"curio-devnet-runtime/try-runtime",
	"curio-testnet-runtime?/try-runtime",
	"curio-mainnet-runtime?/try-runtime",
	"try-runtime-cli/try-runtime"
]

[package.metadata.deb]
maintainer-scripts = "../debian"
